<resources>
    <string name="app_name">Calculator</string>
    <string name="advanced">Adv</string>
    <string name="basic">Basic</string>
    <string name="_0">0</string>
    <string name="clear">Clear</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="divide">÷</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="square">x²</string>
    <string name="root">√</string>
    <string name="bopen">(</string>
    <string name="bclose">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="power">x^y</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="exp">e</string>
    <string name="inverse">Inv</string>
    <string name="deg">deg</string>
    <string name="mmode">Matrix</string>
    <string name="percent">%</string>
    <string name="npr">nPr</string>
    <string name="ncr">nCr</string>
</resources>
