<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ashutosh.calculator.MainActivity"
    android:background="#2a2a2a">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/glayout"
        android:layout_below="@+id/display"
        android:paddingTop="5dp">

        <Button
            android:layout_width="72dp"
            android:layout_height="45dp"
            android:text="@string/advanced"
            android:id="@+id/orient"
            android:layout_row="6"
            android:textAllCaps="false"
            android:layout_column="0"
            android:height="10dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/button_bg2"
            android:layout_columnWeight="100"
            android:layout_margin="2dp"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="45dp"
            android:text="@string/bopen"
            android:id="@+id/bopen"
            android:layout_row="6"
            android:layout_column="1"
            android:height="10dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/button_bg3"
            android:layout_columnWeight="100"
            android:layout_margin="2dp"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="45dp"
            android:text="@string/bclose"
            android:id="@+id/bclose"
            android:layout_row="6"
            android:layout_column="2"
            android:height="10dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/button_bg3"
            android:layout_columnWeight="100"
            android:layout_margin="2dp"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="67dp"
            android:layout_height="45dp"
            android:text="@string/clear"
            android:id="@+id/clear"
            android:layout_row="6"
            android:layout_column="3"
            android:textAllCaps="false"
            android:height="10dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/button_bg4"
            android:layout_columnWeight="100"
            android:layout_margin="2dp"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/seven"
            android:id="@+id/seven"
            android:layout_row="7"
            android:layout_column="0"
            android:height="70dp"
            android:background="@drawable/button_bg1"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/eight"
            android:id="@+id/eight"
            android:layout_row="7"
            android:layout_column="1"
            android:height="70dp"
            android:background="@drawable/button_bg1"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/nine"
            android:id="@+id/nine"
            android:layout_row="7"
            android:layout_column="2"
            android:height="70dp"
            android:background="@drawable/button_bg1"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="67dp"
            android:layout_height="60dp"
            android:text="@string/multiply"
            android:id="@+id/multiply"
            android:layout_row="8"
            android:layout_column="3"
            android:height="70dp"
            android:textAllCaps="false"
            android:background="@drawable/button_bg3"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:width="70dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/four"
            android:id="@+id/four"
            android:layout_row="8"
            android:layout_column="0"
            android:height="70dp"
            android:background="@drawable/button_bg1"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/five"
            android:id="@+id/five"
            android:layout_row="8"
            android:layout_column="1"
            android:height="70dp"
            android:background="@drawable/button_bg1"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:width="70dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/six"
            android:id="@+id/six"
            android:layout_row="8"
            android:layout_column="2"
            android:height="70dp"
            android:background="@drawable/button_bg1"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="67dp"
            android:layout_height="60dp"
            android:text="@string/divide"
            android:id="@+id/divide"
            android:layout_row="7"
            android:layout_column="3"
            android:height="70dp"
            android:background="@drawable/button_bg3"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:width="70dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/one"
            android:id="@+id/one"
            android:layout_row="9"
            android:layout_column="0"
            android:height="70dp"
            android:background="@drawable/button_bg1"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/two"
            android:id="@+id/two"
            android:layout_row="9"
            android:layout_column="1"
            android:height="70dp"
            android:background="@drawable/button_bg1"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/three"
            android:id="@+id/three"
            android:layout_row="9"
            android:layout_column="2"
            android:height="70dp"
            android:background="@drawable/button_bg1"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="67dp"
            android:layout_height="60dp"
            android:text="@string/minus"
            android:id="@+id/minus"
            android:layout_row="9"
            android:layout_column="3"
            android:height="70dp"
            android:background="@drawable/button_bg3"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:width="70dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/dot"
            android:id="@+id/dot"
            android:layout_row="10"
            android:layout_column="0"
            android:height="70dp"
            android:background="@drawable/button_bg2"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/zero"
            android:id="@+id/zero"
            android:layout_row="10"
            android:layout_column="1"
            android:height="70dp"
            android:background="@drawable/button_bg1"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="72dp"
            android:layout_height="60dp"
            android:text="@string/equal"
            android:id="@+id/equal"
            android:layout_row="10"
            android:layout_column="2"
            android:height="70dp"
            android:background="@drawable/button_bg2"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

        <Button
            android:layout_width="67dp"
            android:layout_height="60dp"
            android:text="@string/plus"
            android:id="@+id/plus"
            android:layout_row="10"
            android:layout_column="3"
            android:height="70dp"
            android:background="@drawable/button_bg3"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:width="70dp"
            android:layout_margin="2dp"
            android:layout_columnWeight="100"
            android:layout_rowWeight="100" />

    </GridLayout>

    <EditText
        android:layout_width="72dp"
        android:layout_height="175dp"
        android:id="@+id/display"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/display_bg"
        android:textSize="30sp"
        android:text="@string/_0"
        android:padding="5dp"
        android:maxLines="50"
        android:lines="50"
        android:editable="false"
        android:layout_alignParentLeft="false"
        android:gravity="top"
        android:clickable="true"
        android:elegantTextHeight="false"
        android:foregroundGravity="bottom" />

</RelativeLayout>
